# trabalho_individual

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: model_benchmark.py  model_test_rl.py
notebooks/: 2.0  benchmark_image.ipynb  notebook_test_rl_3.ipynb  notebook_teste_rl.ipynb  notebook_teste_rl_2.ipynb
