[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "trabalho_individual"
version = "0.0.1"
description = "Using Reinforment learning to detect diseases using VQC"
authors = [
  { name = "Luiz Francisco" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["trabalho_individual"]
include = ["pyproject.toml", "trabalho_individual/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["trabalho_individual"]
force-sort-within-sections = true

